@@ -3,7 +3,8 @@ polyphone (1.9) unstable; urgency=low
   * (new) soundfont repository online
   * (new) portuguese translation
   * (new) tool to export the preset list in a text format
-  * (improvement) Glow effect when the virtual keyboard is focused with ctrl+K
+  * (improvement) table cells linked to a modulator have a thicker border
+  * (improvement) glow effect when the virtual keyboard is focused with ctrl+K
   * (improvement) EQ values automatically stored and loaded on startup
   * (improvement) highlight a modulator corresponding to a cell and vice versa
   * (fix) crash with a drag & drop in the tree
@@ -12,6 +13,7 @@ polyphone (1.9) unstable; urgency=low
   * (fix) a double-click in the tree didn't expand or collapse the elements
   * (fix) a same file could be loaded twice on windows
   * (fix) sometimes the loop cell couldn't be edited with the mouse
+  * (fix) wrong modulators were sometimes displayed after a selection in the tree
 
  -- Davy Triponney <davy.triponney@gmail.com>  Wed, 16 Nov 2017 17:51:55 +0100
 
